--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -1,32 +1,76 @@
 @import "mixins";
 @import "variables";
 
-.container {
-  // height: 50px;
-  // background-color: #000;
-  color: #fff;
+.navContainer {
+  padding: 50px 75px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  padding: 0 100px;
-  font-size: 18px;
-}
-
-.listItem{
-  display: inline;
-  margin: 30px;
-  @include type(16px, 24px);
-  text-transform: uppercase;
-  color: lightgray;
-  cursor: pointer;
-  a {
+  align-items: center;
+  width: 100%;
+  // height: 100px;
+  position: fixed;
+  top: 0;
+  z-index: 999;
+  background: transparent;
+  transition: all .4s ease;
+  .logo {
+    cursor: pointer;
+    height: 120px;
+    transition: all .4s ease;
+  }
+  .list {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 0 50px;
+    .listItem{
+      @include type(16px, 24px);
+      text-transform: uppercase;
+      cursor: pointer;
+      a {
+        text-decoration: none;
+        color: $color-secondary;
+        transition: color .4s ease;
+        &:hover {
+          color: $color-primary;
+        }
+        &.active {
+          color:  $color-primary;
+        }
+      }
+    }
+  }
+  .donate {
     text-decoration: none;
-    color: $color-secondary;
-    &.active {
-      color:  $color-primary;
+    padding: 12px 18px;
+    background: $color-primary;
+    color: #ffffff;
+  }
+
+  &.scrolled {
+    background: $color-secondary;
+    padding: 25px 75px;
+    .logo {
+      height: 80px;
+      fill: #ffffff;
+    }
+    .list {
+      .listItem {
+        a {
+          color: #ffffff;
+          &:hover {
+            color: $color-primary;
+          }
+        }
+      }
     }
   }
 }
+
+
+
+
 
 .hamburger {
   display: none;
@@ -35,7 +79,7 @@
 .line {
   width: 100%;
   height: 3px;
-  background-color: white;
+  background-color: $color-primary;
 }
 
 .menu {
@@ -55,12 +99,15 @@
   transition: all 1s ease;
 }
 
-@media screen and (max-width: 480px) {
+@include bp(tb) {
   .container {
     padding: 0 20px;
   }
   .list {
     display: none;
+    &.open {
+      display: block;
+    }
   }
 
   .hamburger {
@@ -77,5 +124,4 @@
     align-items: center;
     justify-content: space-around;
   }
-
 }
