--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,6 +3,10 @@ html {
   font-size: 16px;
 }
 
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
