--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -2,9 +2,11 @@
 @import "variables";
 
 .container {
-  height: 90vh;
+  height: 100vh;
   min-height: 100%;
+  max-height: 1100px;
   position: relative;
+  z-index: 0;
   @include bp(tb) {
     max-height: 600px;
   }
@@ -12,9 +14,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: top;
   }
-  position: relative;
-  z-index: 0;
 }
 
 .cta {
