--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -2,126 +2,178 @@
 @import "variables";
 
 .navContainer {
-  padding: 50px 75px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  // height: 100px;
-  position: fixed;
-  top: 0;
-  z-index: 999;
-  background: transparent;
-  transition: all .4s ease;
-  .logo {
-    cursor: pointer;
-    height: 120px;
-    transition: all .4s ease;
-  }
-  .list {
-    list-style: none;
+    padding: 50px 75px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
-    padding: 0 50px;
-    .listItem{
-      @include type(16px, 24px);
-      text-transform: uppercase;
-      cursor: pointer;
-      a {
-        text-decoration: none;
-        color: $color-secondary;
-        transition: color .4s ease;
-        &:hover {
-          color: $color-primary;
-        }
-        &.active {
-          color:  $color-primary;
-        }
-      }
-    }
-  }
-  .donate {
-    text-decoration: none;
-    padding: 12px 18px;
-    background: $color-primary;
-    color: #ffffff;
-  }
-
-  &.scrolled {
-    background: $color-secondary;
-    padding: 25px 75px;
+    position: fixed;
+    top: 0;
+    z-index: 999;
+    background-color: rgba(242, 245, 169, 0);
+    transition: all 0.4s linear;
     .logo {
-      height: 80px;
-      fill: #ffffff;
+        cursor: pointer;
+        height: 100px;
+        transition: all 0.4s ease;
     }
     .list {
-      .listItem {
-        a {
-          color: #ffffff;
-          &:hover {
-            color: $color-primary;
-          }
+        list-style: none;
+        display: flex;
+        justify-content: space-around;
+        width: 80%;
+        margin: 0 50px;
+        .listItem {
+            font-size: 24px;
+            font-size: clamp(14px, 2vw, 20px);
+            cursor: pointer;
+            a {
+                text-decoration: none;
+                color: $color-secondary;
+                transition: color 0.4s ease;
+                &:hover {
+                    color: $color-primary;
+                }
+                &.active {
+                    color: $color-primary;
+                }
+            }
         }
-      }
     }
-  }
+    .social {
+        display: flex;
+        margin-right: 50px;
+        a {
+            margin: 0 5px;
+        }
+    }
+    .donate {
+        text-decoration: none;
+        padding: 8px 10px;
+        background: $color-primary;
+        color: #ffffff;
+        font-weight: 800;
+        transition: all 0.4s ease;
+        &:hover {
+            background: $color-secondary;
+            color: $color-primary;
+        }
+    }
+
+    &.scrolled {
+        background-color: rgba(0, 0, 0, 0.85);
+        padding: 25px 75px;
+        .logo {
+            fill: #ffffff;
+        }
+        .list {
+            .listItem {
+                a {
+                    color: #ffffff;
+                    &:hover {
+                        color: $color-primary;
+                    }
+                    &.active {
+                        color: $color-primary;
+                    }
+                }
+            }
+        }
+    }
 }
 
-
-
-
-
 .hamburger {
-  display: none;
+    display: none;
 }
 
 .line {
-  width: 100%;
-  height: 3px;
-  background-color: $color-primary;
+    width: 100%;
+    height: 2px;
+    background-color: $color-primary;
+    transition: all 0.4s ease;
 }
-
-.menu {
-  display: none;
-  position: fixed;
-  width: 100vw;
-  height: calc(100vh - 50px);
-  background-color: black;
-  top: 50px;
-  /* right: 0px; */
-  z-index: 9999;
-  margin: 0;
-  padding: 0;
-  font-weight: bold;
-  color: lightgray;
-  list-style: none;
-  transition: all 1s ease;
-}
-
-@include bp(tb) {
-  .container {
-    padding: 0 20px;
-  }
-  .list {
-    display: none;
-    &.open {
-      display: block;
+@include bp(dt) {
+    .navContainer {
+        padding: 25px;
+        .logo {
+            height: 75px;
+        }
+        .list {
+            margin: 0 25px;
+        }
+        .social {
+            margin-right: 25px;
+        }
+        .donate {
+            margin-left: auto;
+            margin-right: 50px;
+        }
     }
-  }
-
-  .hamburger {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 25px;
-    height: 25px;
-    cursor: pointer;
-  }
-  .menu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-  }
+}
+@include bp(tb) {
+    .navContainer {
+        padding: 0 20px;
+        .list {
+            display: none;
+            position: fixed;
+            width: 100vw;
+            height: 100vh;
+            background-color: $color-secondary;
+            top: 0;
+            // right: 0;
+            z-index: 9999;
+            margin: 0;
+            padding: 0;
+            font-weight: bold;
+            list-style: none;
+            transition: all 1s ease;
+            &.open {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                align-items: center;
+                padding: 100px 50px;
+            }
+            .listItem {
+                a {
+                    color: #ffffff;
+                }
+            }
+        }
+        .social {
+            display: none;
+            &.open {
+                display: flex;
+                margin-right: 0;
+                position: absolute;
+                top: 25px;
+                left: 50%;
+                transform: translateX(-50%);
+                z-index: 10000;
+            }
+        }
+        .hamburger {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 25px;
+            height: 20px;
+            cursor: pointer;
+            &.open {
+                .line {
+                    // background-color: #ffffff;
+                    &:nth-child(2) {
+                        display: none;
+                    }
+                    &:nth-child(1) {
+                        transform: rotate(-45deg) translateY(4px) translateX(-8px);
+                    }
+                    &:nth-child(3) {
+                        transform: rotate(45deg) translateY(-4px) translate(-8px);
+                    }
+                }
+                z-index: 10000;
+            }
+        }
+    }
 }
