--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -2,13 +2,13 @@
 @import "variables";
 
 .container {
-  height: 100vh;
+  height: 90vh;
   min-height: 100%;
-  max-height: 1100px;
+  max-height: 1500px;
   position: relative;
   z-index: 0;
   @include bp(tb) {
-    max-height: 600px;
+    max-height: 500px;
   }
   img {
     width: 100%;
@@ -20,17 +20,56 @@
 
 .cta {
   display: flex;
-  justify-content: space-between;
-  padding: 50px 100px;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 30px 50px;
   background-color: $color-primary;
   color: #ffffff;
   position: relative;
   z-index: 1;
+  @include bp(tb) {
+    padding: 25px 50px;
+    justify-content: center;
+  }
   h2 {
-
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: clamp(18px, 3vw, 48px);
+    @include bp(tb) {
+      margin-bottom: 15px;
+    }
   }
   form {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    @include bp(tb) {
+      justify-content: center;
+    }
+    input {
+      padding: 8px 10px;
+      margin: 10px;
+      border-width: 0;
+      font-size: 16px;
+      @include bp(tb) {
+        margin: 5px 10px 0 0;
+        // flex-basis: 33.333%;
+      }
+    }
+    button {
+      background-color: $color-secondary;
+      color: $color-primary;
+      text-transform: uppercase;
+      padding: 8px 10px;
+      font-weight: 800;
+      border-width: 0;
+      font-size: 16px;
+      @include bp(tb) {
+        margin: 15px 0 0 0;
+        // flex-basis: 33.333%;
+      }
+    }
   }
 }
