--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,41 +1,20 @@
-.container {
-  height: 250px;
-  border-top: 3px solid black;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 18px;
-  padding: 50px;
-}
-
-.title {
-  font-weight: 400;
-  color: white;
-  background-color: green;
-  padding: 5px;
-}
-
-.linkTitle {
-  text-decoration: underline;
-}
-
-.link {
-  display: flex;
-  align-items: center;
-}
-
-@media screen and (max-width: 480px) {
+.footer {
+  text-align: center;
+  background-color: #000000;
+  color: #ffffff;
   .container {
-    height: auto;
-    flex-direction: column;
-  }
-
-  .title,
-  .linkTitle {
-    font-size: 30px;
-  }
-
-  .cardItem{
-    text-align: center;
+    padding: 50px;
+    .social {
+      margin-bottom: 20px;
+      a {
+        &:nth-child(2){
+          padding: 0 10px;
+        }
+      }
+    }
+    .small {
+      font-size: 15px;
+      font-weight: 300;
+    }
   }
 }
