--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -4,17 +4,43 @@
 .container {
   height: 90vh;
   min-height: 100%;
-  max-height: 1500px;
+  max-height: 1100px;
   position: relative;
   z-index: 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
   @include bp(tb) {
-    max-height: 500px;
+    max-height: 550px;
   }
   img {
+    position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: top;
+    @include bp(mb) {
+      object-position: 60% 50%;
+    }
+  }
+  .textContainer {
+    position: relative;
+    z-index: 5;
+    padding: 0 75px;
+    max-width: 50%;
+    @include bp(dt) {
+      padding: 130px 25px;
+      max-width: 60%;
+    }
+    @include bp(tb) {
+      padding: 0 20px;
+    }
+    h1 {
+      font-size: clamp(30px, 3vw, 120px);
+      color: $color-primary;
+      font-weight: 600;
+      margin-bottom: 30px;
+    }
   }
 }
 
@@ -48,6 +74,9 @@
     @include bp(tb) {
       justify-content: center;
     }
+    @include bp(mb) {
+      flex-direction: column;
+    }
     input {
       padding: 8px 10px;
       margin: 10px;
@@ -56,6 +85,9 @@
       @include bp(tb) {
         margin: 5px 10px 0 0;
         // flex-basis: 33.333%;
+      }
+      @include bp(mb) {
+        margin: 5px 0 0 0;
       }
     }
     button {
@@ -71,5 +103,122 @@
         // flex-basis: 33.333%;
       }
     }
+  }
+}
+
+.twoCol {
+  display: flex;
+  @include bp(dt) {
+    flex-direction: column;
+  }
+  > * {
+    flex: 1;
+  }
+  .textCol {
+    flex-basis: 40%;
+    padding: 100px 75px;
+    @include bp(dt) {
+      padding: 50px 20px;
+    }
+    @include bp(tb) {
+      padding-right: 20px;
+    }
+    h2 {
+      color: $color-primary;
+      font-weight: 600;
+      font-size: clamp(20px, 3vw, 32px);
+    }
+  }
+  .imgCol {
+    flex-basis: 60%;
+    position: relative;
+    img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: right top;
+      @include bp(dt) {
+        position: relative;
+      }
+    }
+    &::after {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.1) 75%, rgba(255,255,255,1) 100%);
+      @include bp(dt) {
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 70%, white 98%);
+      }
+    }
+  }
+}
+
+.video {
+  background: $color-primary;
+  padding: 100px 75px;
+  @include bp(dt) {
+    padding: 50px 20px;
+  }
+  .mw800 {
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    .videoContainer {
+      position: relative; 
+      padding-bottom: 56.25%; 
+      height: 0; 
+      overflow: hidden; 
+      max-width: 100%; 
+      iframe {
+        position: absolute; 
+        top: 0; 
+        left: 0; 
+        width: 100%; 
+        height: 100%; 
+      }
+    }
+  }
+  .quote {
+    color: #ffffff;
+    text-align: center;
+    margin-bottom: 50px;
+    line-height: 1.8;
+    .small {
+      font-size: 15px;
+      font-weight: 300;
+    }
+  }
+}
+
+.button {
+  text-transform: uppercase;
+  padding: 12px 24px;
+  text-decoration: none;
+  border: 1px solid $color-primary;
+  color: #000000;
+  font-size: clamp(14px, 3vw, 16px);
+  &:hover {
+    background-color: $color-primary;
+    color: #ffffff;
+    transition: all .4s ease;
+  }
+}
+
+.buttonInvert {
+  text-transform: uppercase;
+  padding: 12px 24px;
+  text-decoration: none;
+  border: 1px solid $color-primary;
+  background-color: $color-primary;
+  color: #ffffff;
+  font-size: clamp(14px, 3vw, 18px);
+  &:hover {
+    background-color: transparent;
+    color: #000000;
+    transition: all .4s ease;
   }
 }
