--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,6 +5,7 @@ html {
 
 body {
   font-family: 'Open Sans', sans-serif;
+  font-size: clamp(16px, 3vw, 20px);
 }
 
 *, *:before, *:after {
@@ -20,4 +21,11 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
 img {
   max-width: 100%;
   height: auto;
+}
+
+p {
+  margin-bottom: 20px;
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
