--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -39,7 +39,8 @@
       font-size: clamp(30px, 3vw, 120px);
       color: $color-primary;
       font-weight: 600;
-      margin-bottom: 30px;
+      line-height: 1.2;
+      margin-bottom: 50px;
     }
   }
 }
