--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -99,6 +99,7 @@
       font-weight: 800;
       border-width: 0;
       font-size: 16px;
+      cursor: pointer;
       @include bp(tb) {
         margin: 15px 0 0 0;
         // flex-basis: 33.333%;
@@ -127,7 +128,10 @@
     h2 {
       color: $color-primary;
       font-weight: 600;
+      line-height: 1.3;
       font-size: clamp(20px, 3vw, 32px);
+      margin-bottom: 20px;
+      text-transform: uppercase;
     }
   }
   .imgCol {
@@ -191,6 +195,7 @@
     .small {
       font-size: 15px;
       font-weight: 300;
+      text-transform: uppercase;
     }
   }
 }
