--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,6 +6,7 @@ html {
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: clamp(16px, 3vw, 18px);
+  line-height: 1.6;
 }
 
 *, *:before, *:after {
