--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -20,14 +20,14 @@
     object-fit: cover;
     object-position: top;
     @include bp(mb) {
-      object-position: 60% 50%;
+      object-position: 30% 50%;
     }
   }
   .textContainer {
     position: relative;
     z-index: 5;
     padding: 0 75px;
-    max-width: 75%;
+    max-width: 47%;
     @include bp(dt) {
       padding: 130px 25px;
       max-width: 60%;
@@ -37,76 +37,14 @@
     }
     p {
       margin-bottom: 10px;
+      color: #ffffff;
     }
     h1 {
       font-size: clamp(30px, 3vw, 120px);
       color: $color-primary;
-      font-weight: 600;
+      font-weight: 700;
       line-height: 1.2;
       margin-bottom: 50px;
-    }
-  }
-}
-
-.cta {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 30px 50px;
-  background-color: $color-primary;
-  color: #ffffff;
-  position: relative;
-  z-index: 1;
-  @include bp(tb) {
-    padding: 25px 50px;
-    justify-content: center;
-  }
-  h2 {
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: clamp(18px, 3vw, 48px);
-    @include bp(tb) {
-      margin-bottom: 15px;
-    }
-  }
-  form {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    @include bp(tb) {
-      justify-content: center;
-    }
-    @include bp(mb) {
-      flex-direction: column;
-    }
-    input {
-      padding: 8px 10px;
-      margin: 10px;
-      border-width: 0;
-      font-size: 16px;
-      @include bp(tb) {
-        margin: 5px 10px 0 0;
-        // flex-basis: 33.333%;
-      }
-      @include bp(mb) {
-        margin: 5px 0 0 0;
-      }
-    }
-    button {
-      background-color: $color-secondary;
-      color: $color-primary;
-      text-transform: uppercase;
-      padding: 8px 10px;
-      font-weight: 800;
-      border-width: 0;
-      font-size: 16px;
-      cursor: pointer;
-      @include bp(tb) {
-        margin: 15px 0 0 0;
-        // flex-basis: 33.333%;
-      }
     }
   }
 }
@@ -140,10 +78,21 @@
     h2 {
       text-transform: uppercase;
       color: $color-primary;
-      font-weight: 600;
+      font-weight: 800;
       line-height: 1.3;
       font-size: clamp(20px, 3vw, 32px);
       margin-bottom: 20px;
+    }
+    &.primaryBg {
+      background: $color-primary;
+      h2, p {
+        color: #ffffff;
+      }
+      @include bp(dt) {
+        margin-top: 0;
+        margin-right: unset;
+        padding-top: 0;
+      }
     }
   }
   .imgCol {
@@ -175,6 +124,7 @@
   .imgColRight {
     flex-basis: 55%;
     position: relative;
+    background: $color-primary;
     @include bp(dt) {
       order: -1;
     }
@@ -195,9 +145,9 @@
       height: 100%;
       top: 0;
       left: 0;
-      background: linear-gradient(-90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.1) 50%, rgba(255,255,255,1) 100%);
+      background: linear-gradient(-90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.1) 50%, $color-primary 100%);
       @include bp(dt) {
-        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 70%, white 98%);
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 70%, $color-primary 98%);
       }
     }
   }
