--- a/styles/JoinCta.module.scss
+++ b/styles/JoinCta.module.scss
@@ -1,61 +1,12 @@
 @import "mixins";
 @import "variables";
 
-.container {
-  height: 90vh;
-  min-height: 100%;
-  max-height: 1100px;
-  position: relative;
-  z-index: 0;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  @include bp(tb) {
-    max-height: 550px;
-  }
-  img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: top;
-    @include bp(mb) {
-      object-position: 60% 50%;
-    }
-  }
-  .textContainer {
-    position: relative;
-    z-index: 5;
-    padding: 0 75px;
-    max-width: 75%;
-    @include bp(dt) {
-      padding: 130px 25px;
-      max-width: 60%;
-    }
-    @include bp(tb) {
-      padding: 0 20px;
-    }
-    p {
-      margin-bottom: 10px;
-    }
-    h1 {
-      font-size: clamp(30px, 3vw, 120px);
-      color: $color-primary;
-      font-weight: 700;
-      line-height: 1.2;
-      margin-bottom: 50px;
-    }
-  }
-}
-
 .cta {
   display: flex;
-  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
-  min-height: 30vh;
-  padding: 30px 50px;
+  padding: 30px 75px;
   background-color: $color-primary;
   color: #ffffff;
   position: relative;
@@ -66,7 +17,7 @@
   }
   h2 {
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 800;
     font-size: clamp(18px, 3vw, 48px);
     @include bp(tb) {
       margin-bottom: 15px;
@@ -77,15 +28,26 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    flex: 2;
     @include bp(tb) {
       justify-content: center;
+    }
+    @include bp(mb) {
       flex-direction: column;
+    }
+    .wrapper {
+      flex: 1;
+      margin: 0 10px;
+    }
+    .wrapperButton {
+      margin: 0 10px;
     }
     input {
       padding: 8px 10px;
       margin: 10px;
       border-width: 0;
       font-size: 16px;
+      width: 100%;
       @include bp(tb) {
         margin: 5px 10px 0 0;
         // flex-basis: 33.333%;
