--- a/styles/Priorities.module.scss
+++ b/styles/Priorities.module.scss
@@ -41,78 +41,16 @@
     h1 {
       font-size: clamp(30px, 3vw, 120px);
       color: $color-primary;
-      font-weight: 600;
+      font-weight: 700;
       line-height: 1.2;
       margin-bottom: 50px;
     }
   }
 }
 
-.cta {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 30px 50px;
-  background-color: $color-primary;
-  color: #ffffff;
-  position: relative;
-  z-index: 1;
-  @include bp(tb) {
-    padding: 25px 50px;
-    justify-content: center;
-  }
-  h2 {
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: clamp(18px, 3vw, 48px);
-    @include bp(tb) {
-      margin-bottom: 15px;
-    }
-  }
-  form {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    @include bp(tb) {
-      justify-content: center;
-    }
-    @include bp(mb) {
-      flex-direction: column;
-    }
-    input {
-      padding: 8px 10px;
-      margin: 10px;
-      border-width: 0;
-      font-size: 16px;
-      @include bp(tb) {
-        margin: 5px 10px 0 0;
-        // flex-basis: 33.333%;
-      }
-      @include bp(mb) {
-        margin: 5px 0 0 0;
-      }
-    }
-    button {
-      background-color: $color-secondary;
-      color: $color-primary;
-      text-transform: uppercase;
-      padding: 8px 10px;
-      font-weight: 800;
-      border-width: 0;
-      font-size: 16px;
-      cursor: pointer;
-      @include bp(tb) {
-        margin: 15px 0 0 0;
-        // flex-basis: 33.333%;
-      }
-    }
-  }
-}
-
 .twoCol {
   display: flex;
+  flex-wrap: wrap;
   @include bp(dt) {
     flex-direction: column;
   }
@@ -140,7 +78,7 @@
     h2 {
       text-transform: uppercase;
       color: $color-primary;
-      font-weight: 600;
+      font-weight: 800;
       line-height: 1.3;
       font-size: clamp(20px, 3vw, 32px);
       margin-bottom: 20px;
@@ -154,7 +92,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      object-position: right top;
+      object-position: left top;
       @include bp(dt) {
         position: relative;
       }
@@ -183,7 +121,7 @@
   .title {
     font-size: clamp(30px, 3vw, 120px);
     color: #ffffff;
-    font-weight: 600;
+    font-weight: 700;
     text-align: center;
     margin-bottom: 50px;
   }
@@ -217,5 +155,40 @@
         }
       }
     }
+  }
+}
+
+.readMore {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  .arrow {
+    display: inline-block;
+    transition: all .4s ease;
+    margin-left: 10px;
+    font-size: 20px;
+    line-height: 1;
+    &.on {
+      transform: rotate(90deg);
+      transform-origin: center;
+    }
+  }
+}
+
+.toggleMe {
+  flex-basis: 100%;
+  transition: all .8s ease;
+  &.on {
+    // display: block;
+    opacity: 1;
+    height: 100%;
+    transform: translateY(0%);
+  }
+  &.off {
+    transition: all .8s ease;
+    // display: none;
+    transform: translateY(-100%);
+    opacity: 0;
+    height: 0;
   }
 }
