--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,6 +7,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: clamp(16px, 3vw, 18px);
   line-height: 1.6;
+  font-weight: 400;
 }
 
 *, *:before, *:after {
