--- a/styles/Media.module.scss
+++ b/styles/Media.module.scss
@@ -116,6 +116,9 @@
         }
         @include bp(dt) {
           padding: 50px;
+          &:first-child {
+            padding-bottom: 0;
+          }
         }
       }
     }
