--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -13,21 +13,36 @@
   @include bp(tb) {
     max-height: 550px;
   }
+  @include bp(mb) {
+    align-items: flex-end;
+    &::after {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 20%, #272627 95%);
+    }
+  }
   img {
     position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: top;
-    @include bp(mb) {
+    @include bp(ws) {
       object-position: 30% 50%;
+    }
+    @include bp(mb) {
+      object-position: 75% 50%;
     }
   }
   .textContainer {
     position: relative;
     z-index: 5;
     padding: 0 75px;
-    max-width: 47%;
+    max-width: 45%;
     @include bp(dt) {
       padding: 130px 25px;
       max-width: 60%;
@@ -35,14 +50,17 @@
     @include bp(tb) {
       padding: 0 20px;
     }
+    @include bp(mb) {
+      max-width: unset;
+    }
     p {
       margin-bottom: 10px;
       color: #ffffff;
     }
     h1 {
-      font-size: clamp(30px, 3vw, 120px);
+      font-size: clamp(28px, 4vw, 100px);
       color: $color-primary;
-      font-weight: 700;
+      font-weight: 600;
       line-height: 1.2;
       margin-bottom: 50px;
     }
@@ -51,6 +69,10 @@
 
 .twoCol {
   display: flex;
+  min-height: 800px;
+  @include bp(hd) {
+    min-height: unset;
+  }
   @include bp(dt) {
     flex-direction: column;
   }
@@ -149,6 +171,144 @@
       @include bp(dt) {
         background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 70%, $color-primary 98%);
       }
+    }
+  }
+}
+
+.fullLeft {
+  position: relative;
+  min-height: 800px;
+  display: flex;
+  align-items: center;
+  @include bp(hd) {
+    min-height: unset;
+  }
+  @include bp(dt) {
+    flex-direction: column;
+  }
+  .fullImg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: 50% 30%;
+    }
+    @include bp(dt) {
+      position: relative;
+      img {
+        min-height: 500px;
+        object-position: left;
+      }
+    }
+    &::after {
+      @include bp(dt) {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 70%, white 98%);
+      }
+    }
+  }
+  .textCol {
+    position: relative;
+    z-index: 1;
+    max-width: 50%;
+    margin-left: auto;
+    padding: 120px 75px 120px 0;
+    @include bp(dt) {
+      padding: 50px 25px;
+      margin-top: -75px;
+      max-width: unset;
+    }
+    @include bp(tb) {
+      padding-right: 20px;
+    }
+    h2 {
+      text-transform: uppercase;
+      color: $color-primary;
+      font-weight: 800;
+      line-height: 1.3;
+      font-size: clamp(20px, 3vw, 32px);
+      margin-bottom: 20px;
+    }
+  }
+}
+
+.fullRight {
+  position: relative;
+  min-height: 800px;
+  display: flex;
+  align-items: center;
+  @include bp(hd) {
+    min-height: unset;
+  }
+  @include bp(dt) {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .fullImg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: 50% 30%;
+    }
+    @include bp(dt) {
+      position: relative;
+      img {
+        min-height: 500px;
+        object-position: right;
+      }
+    }
+    &::after {
+      @include bp(dt) {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 70%, $color-primary 98%);
+      }
+    }
+  }
+  .textCol {
+    position: relative;
+    z-index: 1;
+    max-width: 50%;
+    margin-right: auto;
+    padding: 120px 0 120px 75px;
+    color: #ffffff;
+    @include bp(dt) {
+      padding: 0 50px 50px 25px;
+      margin-top: -75px;
+      max-width: unset;
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, $color-primary 10%, $color-primary 98%);
+    }
+    @include bp(tb) {
+      padding-right: 20px;
+    }
+    h2 {
+      text-transform: uppercase;
+      font-weight: 800;
+      line-height: 1.3;
+      font-size: clamp(20px, 3vw, 32px);
+      margin-bottom: 20px;
     }
   }
 }
