--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -13,14 +13,29 @@
   @include bp(tb) {
     max-height: 550px;
   }
+  @include bp(mb) {
+    align-items: flex-end;
+    &::after {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 50%, #ffffff 95%);
+    }
+  }
   img {
     position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: top;
-    @include bp(mb) {
+    @include bp(dt) {
       object-position: 60% 50%;
+    }
+    @include bp(mb) {
+      object-position: 80% 50%;
     }
   }
   .textContainer {
@@ -35,18 +50,33 @@
     @include bp(tb) {
       padding: 0 20px;
     }
+    @include bp(mb) {
+      max-width: unset;
+    }
     h1 {
       font-size: clamp(30px, 3vw, 120px);
       color: $color-primary;
-      font-weight: 700;
+      font-weight: 600;
       line-height: 1.2;
       margin-bottom: 50px;
+      @include bp(tb) {
+        margin-bottom: 25px;
+      }
+    }
+    a {
+      @include bp(mb) {
+        display: none;
+      }
     }
   }
 }
 
 .twoCol {
   display: flex;
+  min-height: 800px;
+  @include bp(hd) {
+    min-height: unset;
+  }
   @include bp(dt) {
     flex-direction: column;
   }
@@ -56,11 +86,17 @@
   .textCol {
     flex-basis: 40%;
     padding: 100px 75px;
+    position: relative;
+    z-index: 1;
+    margin-left: -75px;
     @include bp(dt) {
-      padding: 50px 20px;
+      padding: 0 25px 50px 25px;
+      margin-top: -50px;
+      margin-left: 0;
     }
     @include bp(tb) {
-      padding-right: 20px;
+      padding: 0 20px 50px 20px;
+      margin-top: -25px;
     }
     h2 {
       color: $color-primary;
@@ -128,12 +164,8 @@
     color: #ffffff;
     text-align: center;
     margin-bottom: 50px;
-    line-height: 1.8;
-    .small {
-      font-size: 15px;
-      font-weight: 300;
-      text-transform: uppercase;
-    }
+    line-height: 1.6;
+    font-size: clamp(20px, 3vw, 24px);
   }
 }
 
