mobile nav update

--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -35,7 +35,6 @@
                 text-decoration: none;
                 color: $color-secondary;
                 transition: color 0.4s ease;
-
                 &:hover {
                     color: $color-primary;
                 }
@@ -56,7 +55,8 @@
         }
     }
 
-    .donate, .lang {
+    .donate,
+    .lang {
         text-decoration: none;
         padding: 8px 10px;
         background: $color-primary;
@@ -64,28 +64,27 @@
         font-size: 15px;
         font-weight: 800;
         transition: all 0.4s ease;
-
         &:hover {
             background: $color-secondary;
             color: $color-primary;
         }
-      }
-      .lang {
+    }
+    .lang {
         background: #000000;
         margin-left: 12px;
-      }
+    }
 
     &.scrolled {
         background-color: rgba(0, 0, 0, 0.85);
         padding: 25px 75px;
 
         .lang {
-          background: #ffffff;
-          color: $color-primary;
-          &:hover {
-            color: #ffffff;
-            background: $color-primary;
-          }
+            background: #ffffff;
+            color: $color-primary;
+            &:hover {
+                color: #ffffff;
+                background: $color-primary;
+            }
         }
 
         .logo {
@@ -96,7 +95,6 @@
             .listItem {
                 a {
                     color: #ffffff;
-
                     &:hover {
                         color: $color-primary;
                     }
@@ -111,24 +109,24 @@
 }
 
 .whiteNav {
-  .navContainer {
-    .list {
-        .listItem {
-            a {
-                color: #ffffff;
-                &:hover {
-                    color: $color-primary;
-                }
-                &.active {
-                    color: $color-primary;
+    .navContainer {
+        .list {
+            .listItem {
+                a {
+                    color: #ffffff;
+                    &:hover {
+                        color: $color-primary;
+                    }
+                    &.active {
+                        color: $color-primary;
+                    }
                 }
             }
         }
+        .logo {
+            fill: #ffffff;
+        }
     }
-    .logo {
-      fill: #ffffff;
-    }
-  }
 }
 
 .hamburger {
@@ -141,7 +139,6 @@
     background-color: $color-primary;
     transition: all 0.4s ease;
 }
-
 @include bp(dt) {
     .navContainer {
         padding: 25px;
@@ -162,28 +159,31 @@
             margin-left: auto;
         }
         &.scrolled {
-          padding: 25px;
+            padding: 25px;
         }
     }
 }
-
-@include bp(tb) {
-    .navContainer {
+.navContainer {
+      @include bp(tb) {
         padding: 20px;
 
+        .logo {
+            height: 50px;
+        }
+
         .lang {
-          margin-right: 50px;
+            margin-right: 25px;
         }
 
         .list {
             // display: none;
             position: fixed;
             display: flex;
-                flex-direction: column;
-                justify-content: space-evenly;
-                align-items: center;
-                padding: 100px 50px;
-                
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+            padding: 100px 50px;
+
             width: 0;
             height: 100vh;
             background-color: $color-secondary;
@@ -243,11 +243,9 @@
                         height: 0;
                         opacity: 0;
                     }
-
                     &:nth-child(1) {
                         transform: rotate(-45deg) translateY(4px) translateX(-8px);
                     }
-
                     &:nth-child(3) {
                         transform: rotate(45deg) translateY(-6px) translate(-8px);
                     }
@@ -257,7 +255,12 @@
             }
         }
         &.scrolled {
-          padding: 20px;
+            padding: 20px;
         }
+    }
+    @include bp(mb) {
+      .lang, .donate {
+        padding: 4px 8px;
+      }
     }
 }
