--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -25,6 +25,9 @@
         justify-content: space-around;
         width: 80%;
         margin: 0 50px;
+        @include bp(ws) {
+          margin: 0 25px;
+        }
 
         .listItem {
             font-size: 18px;
@@ -52,6 +55,7 @@
 
         a {
             margin: 0 5px;
+            display: flex;
         }
     }
 
