--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -202,6 +202,7 @@
     @include bp(dt) {
       position: relative;
       img {
+        display: block;
         min-height: 500px;
         object-position: left;
       }
@@ -214,7 +215,7 @@
       height: 100%;
       top: 0;
       left: 0;
-        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 70%, white 98%);
+        // background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 70%, white 98%);
       }
     }
   }
@@ -226,7 +227,7 @@
     padding: 120px 75px 120px 0;
     @include bp(dt) {
       padding: 50px 25px;
-      margin-top: -75px;
+      // margin-top: -75px;
       max-width: unset;
     }
     @include bp(tb) {
@@ -271,21 +272,22 @@
     @include bp(dt) {
       position: relative;
       img {
+        display: block;
         min-height: 500px;
         object-position: right;
       }
     }
-    &::after {
-      @include bp(dt) {
-      position: absolute;
-      content: "";
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 70%, $color-primary 98%);
-      }
-    }
+    // &::after {
+    //   @include bp(dt) {
+    //   position: absolute;
+    //   content: "";
+    //   width: 100%;
+    //   height: 100%;
+    //   top: 0;
+    //   left: 0;
+    //   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 85%, rgba(255, 255, 255, 0.25) 90%, $color-primary 98%);
+    //   }
+    // }
   }
   .textCol {
     position: relative;
@@ -295,10 +297,10 @@
     padding: 120px 0 120px 75px;
     color: #ffffff;
     @include bp(dt) {
-      padding: 0 50px 50px 25px;
-      margin-top: -75px;
+      padding: 50px 50px 50px 25px;
+      margin-top: 0px;
       max-width: unset;
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, $color-primary 10%, $color-primary 98%);
+      background: $color-primary;
     }
     @include bp(tb) {
       padding-right: 20px;
