--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -10,6 +10,9 @@
         &:nth-child(2){
           padding: 0 10px;
         }
+        &:nth-child(3){
+          padding-right: 10px;
+        }
       }
     }
     .small {
