--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -110,12 +110,12 @@
   .imgCol {
     flex-basis: 60%;
     position: relative;
-    img {
+    img, video {
       position: absolute;
       width: 100%;
       height: 100%;
       object-fit: cover;
-      object-position: right top;
+      // object-position: right top;
       @include bp(dt) {
         position: relative;
       }
@@ -166,6 +166,9 @@
     margin-bottom: 50px;
     line-height: 1.6;
     font-size: clamp(20px, 3vw, 24px);
+    img {
+      max-width: 250px;
+    }
   }
 }
 
