--- a/styles/Media.module.scss
+++ b/styles/Media.module.scss
@@ -13,6 +13,18 @@
   @include bp(tb) {
     max-height: 550px;
   }
+  @include bp(mb) {
+    align-items: flex-end;
+    &::after {
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.25) 70%, #ffffff 98%);
+      }
+    }
   img {
     position: absolute;
     width: 100%;
@@ -20,7 +32,7 @@
     object-fit: cover;
     object-position: top;
     @include bp(mb) {
-      object-position: 60% 50%;
+      object-position: 80% 50%;
     }
   }
   .textContainer {
@@ -35,6 +47,9 @@
     @include bp(tb) {
       padding: 0 20px;
     }
+    @include bp(mb) {
+      max-width: unset;
+  }
     p {
       margin-bottom: 10px;
     }
@@ -44,6 +59,9 @@
       font-weight: 700;
       line-height: 1.2;
       margin-bottom: 50px;
+      @include bp(mb) {
+        margin-bottom: 20px;
+      }
     }
   }
 }
