--- a/styles/Priorities.module.scss
+++ b/styles/Priorities.module.scss
@@ -193,6 +193,11 @@
         z-index: 1;
         max-width: 50%;
         padding: 120px 75px;
+        transition: all .8s ease;
+        &.fullWidth {
+          max-width: 100%;
+          background: rgba(0, 0, 0, 0.8);
+        }
         @include bp(dt) {
           padding: 0 50px 50px 25px;
           margin-top: -75px;
@@ -335,16 +340,16 @@
 }
 
 .content {
-  margin-top: -75px;
-  margin-bottom: 75px;
+  // margin-top: -75px;
+  // margin-bottom: 75px;
   ul {
-    padding: 50px;
+    // padding-top: 25px;
     ul {
-      padding: 25px;
+      padding-top: 20px;
     }
   }
   &.dark {
-    background: #000000;
+    // background: #000000;
     color: #ffffff;
   }
   &.light {
