before masthead updates

--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -52,9 +52,12 @@
     }
     p {
       margin-bottom: 10px;
+      @include bp(mb) {
+        color: #ffffff;
+      }
     }
     h1 {
-      font-size: clamp(30px, 3vw, 120px);
+      font-size: clamp(24px, 3vw, 100px);
       color: $color-primary;
       font-weight: 700;
       line-height: 1.2;
