--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -26,6 +26,8 @@
     }
 
     .list {
+        font-weight: 800;
+        text-transform: uppercase;
         list-style: none;
         display: flex;
         justify-content: space-around;
