--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-size: clamp(16px, 3vw, 18px);
   line-height: 1.6;
   font-weight: 400;
@@ -33,7 +33,7 @@ p {
 }
 
 input, textarea {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 a {
