--- a/styles/Media.module.scss
+++ b/styles/Media.module.scss
@@ -10,20 +10,29 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  &::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: linear-gradient(250deg, rgba(255, 255, 255, 0) 40%, rgba(255, 255, 255, 0.25) 50%, hsla(0, 0%, 100%, 0.9) 90%);
+  }
   @include bp(tb) {
     max-height: 550px;
   }
   @include bp(mb) {
     align-items: flex-end;
     &::after {
-        position: absolute;
-        content: "";
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.25) 70%, #ffffff 98%);
-      }
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.25) 70%, #ffffff 98%);
+    }
     }
   img {
     position: absolute;
@@ -85,7 +94,7 @@
       color: #ffffff;
       font-weight: 800;
       line-height: 1.3;
-      font-size: clamp(28px, 3vw, 36px);
+      font-size: clamp(24px, 3vw, 36px);
       margin-bottom: 20px;
     }
     &:nth-child(odd) {
