mobile and media page updates

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -96,7 +96,7 @@
     }
     @include bp(tb) {
       padding: 0 20px 50px 20px;
-      margin-top: -25px;
+      margin-top: 25px;
     }
     h2 {
       color: $color-primary;
@@ -128,7 +128,7 @@
       left: 0;
       background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.1) 75%, rgba(255,255,255,1) 100%);
       @include bp(dt) {
-        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 70%, white 98%);
+        background: unset;
       }
     }
   }
