--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -171,6 +171,7 @@
 
         .donate {
             margin-left: auto;
+            margin-right: 25px;
         }
         &.scrolled {
             padding: 25px;
