--- a/styles/FullDarkLeft.module.scss
+++ b/styles/FullDarkLeft.module.scss
@@ -35,6 +35,7 @@
     }
     @include bp(dt) {
       position: relative;
+      background: #000000;
       img {
         min-height: 500px;
         object-position: right;
@@ -70,10 +71,10 @@
       background: rgba(0, 0, 0, 0.8);
     }
     @include bp(dt) {
-      padding: 0 50px 50px 25px;
-      margin-top: -75px;
+      padding: 25px 50px 50px 25px;
+      margin-top: 0;
       max-width: unset;
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, $color-primary 10%, $color-primary 98%);
+      background: #000000;
     }
     @include bp(tb) {
       padding-right: 20px;
@@ -113,12 +114,12 @@
       left: 0;
       background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 20%, #000000 60%);
       @include bp(dt) {
-        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 20%, #000000 60%);
+        background: unset;
       }
     }
     .textCol {
       @include bp(dt) {
-        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #000000 10%, #000000 98%);
+        background: #000000;
       }
     }
   }
