--- a/styles/FullLightRight.module.scss
+++ b/styles/FullLightRight.module.scss
@@ -35,6 +35,7 @@
     }
     @include bp(dt) {
       position: relative;
+      background: #ffffff;
       img {
         min-height: 500px;
         object-position: right;
@@ -70,10 +71,10 @@
       background: rgb(242, 242, 242, .8);
     }
     @include bp(dt) {
-      padding: 0 50px 50px 25px;
-      margin-top: -75px;
+      padding: 25px 50px 50px 25px;
+      margin-top: 0;
       max-width: unset;
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, $color-primary 10%, $color-primary 98%);
+      background: #ffffff;
     }
     @include bp(tb) {
       padding-right: 20px;
@@ -112,7 +113,7 @@
       left: 0;
       background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 20%, #f2f2f2 60%);
       @include bp(dt) {
-        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 25%, #f2f2f2 45%);
+        background: unset;
       }
     }
     h2 {
@@ -120,7 +121,7 @@
     }
     .textCol {
       @include bp(dt) {
-        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #f2f2f2 10%, #f2f2f2 98%);
+        background: #ffffff;
       }
     }
     &.victims {
