--- a/styles/FullPrimaryLeft.module.scss
+++ b/styles/FullPrimaryLeft.module.scss
@@ -32,7 +32,7 @@
           left: 0;
           background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 20%, rgba(240, 90, 38, .8) 60%);
           @include bp(dt) {
-              background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 35%, rgba(240, 90, 38, .8) 50%);
+              background: unset;
           }
       }
       @include bp(tb) {
@@ -58,6 +58,7 @@
         }
         @include bp(dt) {
             position: relative;
+            background: $color-primary;
             img {
                 min-height: 500px;
                 object-position: right;
@@ -80,13 +81,13 @@
         // transition: all .8s ease;
         &.fullWidth {
             // max-width: 100%;
-            background: rgba(0, 0, 0, 0.8);
+            background: $color-primary;
         }
         @include bp(dt) {
-            padding: 0 50px 50px 25px;
-            margin-top: -75px;
+            padding: 25px 50px 50px 25px;
+            margin-top: 0;
             max-width: unset;
-            background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, $color-primary 10%, $color-primary 98%);
+            background: $color-primary;
         }
         @include bp(tb) {
             padding-right: 20px;
